<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="app_one">Spotify Streamer</string>
    <string name="app_two">Scores App</string>
    <string name="app_three">Library App</string>
    <string name="app_four">Build it bigger</string>
    <string name="app_five">XYZ Reader</string>
    <string name="app_six">Capstone: My Own App</string>
    <string name="action_settings">Settings</string>
</resources>
